# multi-agent-research-system

./: .env  .env.template  .gitignore  AGENTS.md  CLAUDE.md  FILESYSTEM_MEMORY_DESIGN.md  README.md  agent.ipynb  agent.py  agent_test.ipynb  architecture-agent.md  architecture-workflow.md  config.py  dataset.py  eval.ipynb  eval.py  logging_config.py  models.py  plans.md  pyproject.toml  tasks.md  tests.md  tools.py  tracer.py  tracking.py  update.sh  utils.py  workflow.py
.claude/commands/: gitpush.md  research.md
.github/workflows/: droid-code-review.yml
experiments/: manifest.json
experiments/deepseek-v3.1_10ex_20251002_000443/: metadata.json  results.json
experiments/gpt-5-mini_10ex_20251001_235230/: metadata.json  results.json
experiments/gpt-5-mini_2ex_20251002_002102/: metadata.json  results.json  summary_stats.json
experiments/gpt-5-mini_3ex_20251002_001149/: metadata.json  results.json
source_docs/: article.md
tasks/: 2025-10-02-gpt-5-mini-20ex-baseline-experiment.md
tests/: conftest.py  test_agent.py  test_agent_units.py  test_config.py  test_eval.py  test_eval_metric.py  test_filesystem.py  test_tools.py  test_tracer.py  test_tracking.py  test_utils_markdown.py  test_workflow.py
