[project]
name = "multi-agent-research-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Using fork with tool description optimization (PR #8928)
    # Switch back to "dspy-ai" once PR is merged
    "dspy @ git+https://github.com/Ju-usc/dspy.git@feature/tool-description-optimization",
    "openai",
    "jupyter",
    "pydantic",
    "brave-search-python-client",
    "nest-asyncio>=1.6.0",
    "pytest",
    "langfuse",
    "openinference-instrumentation-dspy",
    "pandas",
    "exa-py",
    "perplexityai",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
