[project]
name = "multi-agent-research-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dspy @ git+https://github.com/stanfordnlp/dspy.git@main",
    "openai",
    "jupyter",
    "pydantic",
    "brave-search-python-client",
    "nest-asyncio>=1.6.0",
    "pytest",

    "pandas",
    "exa-py",
    "perplexityai",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
